Uses candidates factory to retrieve data which factory is later consumed by homeCtrl to serve data to different views

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -48,11 +48,11 @@
                     <button class="w3-btn w3-green w3-hover-white" ng-disabled="!message">Submit</button>
                   </p>
                 </form>
-                <div class="w3-right">
+                <!-- <div class="w3-right">
                   <span class="w3-tag">Thanks for your: </span>
-                  <span class="w3-tag" ng-controller="timeCtrl">{{minutes}} m</span>
-                <span class="w3-tag" ng-controller="timeCtrl">{{seconds}} s</span>
-                </div>
+                  <span class="w3-tag">{{minutes}} m</span>
+                  <span class="w3-tag">{{seconds}} s</span>
+                </div> -->
             </div><!-- col -->
           </div><!-- row -->
           
