--- a/components/educationandtraining.html
+++ b/components/educationandtraining.html
@@ -2,7 +2,7 @@
         <h3><i class="fa fa-graduation-cap" aria-hidden="true"></i> EDUCATION AND TRAININGS</h3>
           <div class="w3-card-4">
             <div class="w3-row-padding">
-              <div class="w3-col l6" ng-controller="educationCtrl">
+              <div class="w3-col l6">
                 <div class="w3-responsive">
                   <table class="w3-table w3-striped">
                         <thead>
@@ -18,7 +18,7 @@
                             <th>Percentage</th>
                           </tr>
                         </thead>
-                        <tbody ng-repeat="edu in educations">
+                        <tbody ng-repeat="edu in navneet.educations">
                           <tr class="w3-hover-light-grey">
                             <td>{{ edu.degree }}</td>
                             <td>{{ edu.university }}</td>
@@ -30,7 +30,7 @@
                       </table>
                 </div>
             </div> <!-- col -->
-          <div class="w3-col l6" ng-controller="trainingsCtrl">
+          <div class="w3-col l6">
             <div class="w3-responsive">
               <table class="w3-table w3-striped">
                   <thead>
@@ -44,7 +44,7 @@
                       <th>Certificate</th>
                     </tr>
                   </thead>
-                  <tbody ng-repeat="course in courses">
+                  <tbody ng-repeat="course in navneet.trainings">
                     <tr class="w3-hover-light-grey">
                       <td><a href="http://www.udemy.com/"><img src="https://media.licdn.com/media/p/8/005/05d/205/00a7692.png" style="width:75%" alt="UDEMY"></a> </td>
                       <td>{{ course.name }}</td>
