--- a/components/skills.html
+++ b/components/skills.html
@@ -1,4 +1,4 @@
-<section class="w3-container" id="skills" ng-controller="skillsCtrl">
+<section class="w3-container" id="skills">
     <h3>SKILLS</h3><br/>
   <div class="w3-card-4 w3-padding-medium">
       <div class="w3-row" style="font-size: 1.2em;font-size: medium;font-variant: small-caps;">
@@ -12,7 +12,7 @@
           <div ng-switch="selectedDiv">
             <div class="w3-row-padding" ng-switch-when="Progress Bars">                  
               <div class="w3-col s12 m4 l4 w3-animate-right">
-                <div ng-repeat="skill in skills.slice(0,6)">
+                <div ng-repeat="skill in navneet.skills.slice(0,6)">
                     <div class="w3-progress-container w3-card-2">
                       <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
                           <div class="w3-center w3-text-white">{{skill.name}}</div>
@@ -22,7 +22,7 @@
               </div><!-- col -->
 
               <div class="w3-col s12 m4 l4 w3-animate-bottom">
-                <div ng-repeat="skill in skills.slice(7,13)">
+                <div ng-repeat="skill in navneet.skills.slice(7,13)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
                       <div class="w3-center w3-text-white">{{skill.name}}</div>
@@ -32,7 +32,7 @@
               </div><!-- col -->
 
               <div class="w3-col s12 m4 l4 w3-animate-left">
-                <div ng-repeat="skill in skills.slice(14,21)">
+                <div ng-repeat="skill in navneet.skills.slice(14,21)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
                       <div class="w3-center w3-text-white">{{skill.name}}</div>
@@ -62,7 +62,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr ng-repeat="skill in skills | orderBy: sortColumn:reverseSort | filter: q">
+                    <tr ng-repeat="skill in navneet.skills | orderBy: sortColumn:reverseSort | filter: q">
                       <td>{{$index+1 + "."}}</td>
                       <td>{{skill.name}}</td>
                       <td>{{skill.version}}</td>
