--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -11,8 +11,8 @@
             <span style="font-size: x-large;">I'M
               <strong class="w3-text-green">NAVNEET PRAKASH</strong>
             </span> <br/>
-              Frontend Developer at
-              <a href="http://www.nxtlifetechnologies.com/" style="text-decoration:none;">NxtLife Technologies Ltd. UK</a><hr/>
+              <a class="help" href="https://en.wikipedia.org/wiki/Front-end_web_development">Frontend Developer</a> at
+              <a class="company" href="http://www.nxtlifetechnologies.com/">NxtLife Technologies Ltd. UK</a><hr/>
             <strong class="mg-40">Age:</strong> 24
 
                   <!-- side nav that holds social sharing buttons -->
