--- a/components/skills.html
+++ b/components/skills.html
@@ -51,10 +51,10 @@
                   <thead>
                     <tr class="w3-green">
                       <th>No.</th>
-                      <th ng-click="sortData('name')">Skill Name <span ng-class="getSortClass('name')"></span> </th>
+                      <th class="clickAble" ng-click="sortData('name')">Skill Name <span ng-class="getSortClass('name')"></span> </th>
                       <th>Version</th>
                       <th colspan="2">Last Used</th>
-                      <th>
+                      <th class="clickAble">
                         <span class="w3-tooltip" ng-click="sortData('experience')">EIM <span ng-class="getSortClass('experience')"></span>
                           <span class="w3-text w3-tag w3-blue" style="position:absolute;left:0;top:18px">Experience in Months</span>
                         </span>
