--- a/components/experienceandservices.html
+++ b/components/experienceandservices.html
@@ -5,7 +5,7 @@
                 <header class="w3-green">
                   <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Internship Experience</h3>
                 </header>
-                  <h5><a href="http://www.careertech.in/" target="_blank" style="text-decoration:none;"><i class="fa fa-building-o" aria-hidden="true"></i> CAREERTECH IT SOLUTIONS</a></h5> 
+                  <h5><a class="company" href="http://www.careertech.in/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> CAREERTECH IT SOLUTIONS</a></h5> 
                   <!-- <h6 style="text-indent: 20px; font-size: .9em;"> -Mainly a Web Development / Designing Company</h6> -->
                   <h6 class="expcal"><i class="fa fa-calendar" aria-hidden="true"></i> Feb 2016 - May 2016</h6>
                   <!-- <h5>SOFTWARE ENGINEER</h5> -->
