Shows spinner at the center while retrieving data, hides spinner when data retrieved

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,13 @@
    Author's custom styles
    ========================================================================== */
 
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+}
+
 a.company {
   text-decoration: none;
 }
