--- a/css/w3.css
+++ b/css/w3.css
@@ -168,7 +168,7 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 @media (max-width:992px) and (min-width:601px){.w3-hide-medium{display:none!important}}
 @media (min-width:993px){.w3-hide-large{display:none!important}}
 @media screen and (max-width:992px){.w3-sidenav.w3-collapse{display:none}.w3-main{margin-left:0!important;margin-right:0!important}}
-@media screen and (min-width:993px){.w3-sidenav.w3-collapse{display:block!important}}
+/*@media screen and (min-width:993px){.w3-sidenav.w3-collapse{display:block!important}}*/
 .w3-top,.w3-bottom{position:fixed;width:100%;z-index:1}.w3-top{top:0}.w3-bottom{bottom:0}
 .w3-overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(0,0,0,0.5);z-index:2}
 .w3-left{float:left!important}.w3-right{float:right!important}
