--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,13 +4,13 @@
     <li><a href="#" ng-click="sideNavToggle()"><span class="w3-large">&#9776;</span></a>
     </li>
     <li><a href="#">
-      PORTFOLIO</a>
+      PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
   </ul>
 
   <ul class="w3-navbar w3-green w3-hide-medium w3-hide-small">
     <li><a class="w3-padding-16" href="#">
-      PORTFOLIO</a>
+      PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
     <li><a class="w3-padding-16" href="#">SKILLS</a></li>
     <li><a class="w3-padding-16" href="#">EDUCATION</a></li>
