--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,7 +1,6 @@
 <section class="w3-container">
-  <div class="w3-card-4">
     <div class="w3-row" id="siteHeader">
-      <div class="w3-col w3-card m4 l2" style="height:350px;">
+      <div class="w3-col w3-card-4 m4 l2" style="height:350px;">
         <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
       </div>
       <div class="w3-col m8 l10">
@@ -36,5 +35,4 @@
         </div> <!-- dp details -->
       </div> <!-- intro column beside dp -->
     </div><!-- dp row -->
-  </div><!-- card -->
 </section>
