--- a/components/timeline.html
+++ b/components/timeline.html
@@ -1,29 +1,55 @@
-<h1 class="w3-center">Work Experience and Education</h1>
+<div class="w3-container">
+	<div class="w3-row">
+		<div class="w3-col">	
+			<section class="timeline">
+				<header class="w3-center">
+					<h2>Life Events of 2016</h2>
+				</header>
+				<ul>
+					<li>
+						<div class="w3-card-8">
+							<h4 style="display:inline-block;">Front End Developer</h4><h4 class="w3-right">Sept - Nov</h4>
+							<address>NxtLife Technologies Ltd. Uk</address>
+							Responsibilities: <br/> Developing Front End for their app in Ionic Framework  from the scratch, validating and adding interactivity using AngularJs.
+						</div>
+					</li>
+					<li>
+						<div class="w3-card-8">
+							<time class="w3-tag w3-green w3-large">August</time><br/>
+							Designed this portfolio by learning Twitter Bootstrap 3, W3.css, Google Chart and Angular Js.
+						</div>
+					</li>
+					<li>
+						<div class="w3-card-8">
+							<time class="w3-tag w3-green w3-large">July</time><br/>
+							Learned Apptitude, Reasoning, Job Search Skill. Relocated from Pune to Noida, subsequently from Noida to New Delhi.
+						</div>
+					</li>
+					<li>
+						<div class="w3-card-8">
+							<time class="w3-tag w3-green w3-large">June</time><br/>Git and Git hub version control skill, Learned and compared Angular 1 and Angular 2 to decide which technology should I learn.
+						</div>
+					</li>
+					<li>
+						<div class="w3-card-8">
+							<time class="w3-tag w3-green w3-large">May</time><br/>
+							Learned Web and Mobile Debugging using Google Chrome Dev Tool
+							Explored recent trends and technology like Wordpress CMS.
+						</div>
+					</li>
+					<li>
+						<div class="w3-card-8">
+							<time class="w3-tag w3-green w3-large">Feb - Apr.</time><br/>
+							PHP Developer at CAREERTECH IT SOLUTIONS
+						</div>
+					</li>
+					<!-- more list items here -->
+				</ul>
+			</section>
+		</div>
+	</div>
+</div>
 
-<section class="timeline">
-	<ul>
-		<li>
-			<div>
-				<time>2016</time>
-				At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>2015</time>
-				At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-			</div>
-		</li>
-		<li>
-			<div>
-				<time>2014</time>
-				At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-			</div>
-		</li>
-
-		<!-- more list items here -->
-	</ul>
-</section>
 
 <script type="text/javascript">
 	
