--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@
   width: 400px;
   padding: 15px;
   background: #F45B69;
+  color: white;
   visibility: hidden;
   opacity: 0;
   transition: all .7s ease-in-out;
@@ -77,6 +78,36 @@
   transform: none;
   visibility: visible;
   opacity: 1;
+}
+
+/* GOING RESPONSIVE */
+@media screen and (max-width: 900px) {
+  .timeline ul li div {
+    width: 250px;
+  }
+  .timeline ul li:nth-child(even) div {
+    left: -289px; /*250+45-6*/
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timeline ul li {
+    margin-left: 20px;
+  }
+   
+  .timeline ul li div {
+    width: calc(100vw - 91px);
+  }
+   
+  .timeline ul li:nth-child(even) div {
+    left: 45px;
+  }
+   
+  .timeline ul li:nth-child(even) div::before {
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    border-color: transparent #F45B69 transparent transparent;
+  }
 }
 
 /* TIMELINE STYLES
