--- a/components/timeline.html
+++ b/components/timeline.html
@@ -1,28 +1,73 @@
+<style type="text/css">
+	.timeline article h6{
+		margin: 0;
+		font-weight: bold;
+	}
+	.timeline article > p {
+		margin-top: 5px;
+		margin-bottom: 0;
+	}
+	.timeline article > p::first-letter {
+		font-size: 3em;
+		font-weight: bold;
+		float: left;
+		padding: 6px 5px 0px 0px;
+	}
+	.timeline article .content {
+		font-size: .8em;
+	}
+	.timeline article a {
+		text-decoration: none;
+	}
+</style>
+
 <div class="w3-container">
 	<div class="w3-row">
-		<div class="w3-col">
-			<section class="timeline w3-border w3-border-red">
-				<header class="w3-center">
-					<h2>TIMELINE</h2>
+		<div class="w3-col w3-card-4">
+			<section class="timeline">
+				<header class="w3-center w3-green">
+					<h2>WORK EXPERIENCE</h2>
 				</header>
-				<ul class="timeline w3-border w3-border-blue">
+				<ul>
 					<li>
-						<div>
-							<time>2016</time>
-							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-						</div>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRONT END DEVELOPER </h6>
+							<h6 class="content"><a href="http://www.nxtlifetechnologies.com" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> NxtLife Technologies Ltd. UK</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Sept - Nov</h6>
+							<p>Responsible for planning, designing, developing the cross browser compliant and platform independent entire Front End from the scratch using Ionic, SASS, AngularJs, JavaScript.</p>
+						</article>
 					</li>
 					<li>
-						<div>
-							<time>2015</time>
-							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-						</div>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
+							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - Aug.</h6>
+							<p>Learned AngularJs, Bootstrap3 grid system, W3.css, Google chart, Brushed up existing skills.</p>
+						</article>
 					</li>
 					<li>
-						<div>
-							<time>2014</time>
-							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-						</div>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> Online Training </h6>
+							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> May - June</h6>
+							<p>Learned Angular 2, Git and Github, Aptitude, Reasoning, other research.</p>
+						</article>
+					</li>
+					<li>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRESHER </h6>
+							<h6 class="content"><a href="http://www.careertech.in" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> CareerTech IT Solution</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Feb - April</h6>
+							<p>Object oriented analysis and design, documentation. Quering &amp; retrieving data from SQL Server database using PL/SQL. Followed by exam preparation.</p>
+						</article>
+					</li>
+					<li>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i>MCA(Management) </h6>
+							<h6 class="content"><a href="http://www.dypimca.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Pad. Dr. D.Y.Patil Institue of MCA, Akurdi, Pune</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2013 - April 2016</h6>
+							<p>Graduated from University of Pune in first class.</p>
+						</article>
 					</li>
 					<!-- more list items here -->
 				</ul>
