--- a/css/keyframeAnimations.css
+++ b/css/keyframeAnimations.css
@@ -1,4 +1,13 @@
 @keyframes flipUp {
-  from {transform: rotateX(90deg);}
-  to {tranform: rotateX(0deg);}
+  0% {transform: rotateX(90deg);}
+  100% {tranform: rotateX(0);}
+}
+
+@keyframes swing {
+	0% {transform: rotateY(0);}
+	20% {transform: rotateY(-45deg);}
+	40% {transform: rotateY(45deg);}
+	60% {transform: rotateY(-45deg);}
+	80% {transform: rotateY(45deg);}
+	100% {transform: rotateY(0);}
 }
