Inserts year nodes on the timeline

--- a/components/timeline.html
+++ b/components/timeline.html
@@ -22,12 +22,13 @@
 					</h2>
 				</header>
 				<ul>
+					<li data-year="2016"></li>
 					<li>
 						<article class="w3-card-4">
 							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRONT END DEVELOPER </h6>
 							<h6 class="content"><a href="http://www.nxtlifetechnologies.com" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> NxtLife Technologies Ltd. UK</a></h6>
 							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Sept - Nov</h6>
-							<p>Responsible for planning, designing, developing the cross browser compliant and platform independent entire Front End from the scratch using Ionic, SASS, AngularJs, JavaScript.</p>
+							<p>Responsible for planning, designing, and doing revision controlled development of cross browser compliant and platform independent entire Front End from the scratch using Ionic, SASS, AngularJs, JavaScript, Git and Bitbucket.</p>
 						</article>
 					</li>
 					<li>
@@ -54,12 +55,11 @@
 							<p>Object oriented analysis and design, documentation. Quering &amp; retrieving data from SQL Server database using PL/SQL. Followed by exam preparation.</p>
 						</article>
 					</li>
+					<li data-year="2015"></li>
+					<li></li>
 					<li>
 						<article class="w3-card-4">
-							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i>MCA(Management) </h6>
-							<h6 class="content"><a href="http://www.dypimca.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Pad. Dr. D.Y.Patil Institue of MCA, Akurdi, Pune</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2013 - April 2016</h6>
-							<p>Graduated from University of Pune in first class.</p>
+							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> MCA </h6>						
 						</article>
 					</li>
 					<!-- more list items here -->
