--- a/css/keyframeAnimations.css
+++ b/css/keyframeAnimations.css
@@ -11,3 +11,8 @@
 	80% {transform: rotateY(45deg);}
 	100% {transform: rotateY(0);}
 }
+
+@keyframes flag {
+	0% {transform: rotateY(0) rotateX(2deg)}
+	100% {transform: rotateY(4deg) rotateX(0);}
+}
